# predictaX

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0a1b2c3d4e5f_update_mundial_match_descriptions.py  4f361e107d91_add_uuid_pks_avatar_url_and_prediction_.py  7c945e63e821_add_user_role_and_ai_usage_log.py  92ea4bcafa83_add_activity_log.py  a1b2c3d4e5f6_add_mundial_category.py  a7b8c9d0e1f2_add_otp_codes_table.py  b101fa28a04d_initial_schema.py  b2c3d4e5f6a7_add_stats_data_to_markets.py  b8c9d0e1f2a3_add_probability_at_bet_to_predictions.py  c3d4e5f6a7b8_add_admin_analytics_indexes.py  d4e5f6a7b8c9_add_user_legal_consent_fields.py  e5f6a7b8c9d0_add_user_deleted_at.py  f6a7b8c9d0e1_add_user_cookie_consent_fields.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: database.py  exceptions.py  rate_limit.py  security.py  tracking.py
backend/app/models/: __init__.py  activity_log.py  ai_usage_log.py  market.py  market_snapshot.py  otp_code.py  prediction.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  markets.py  predictions.py  users.py
backend/scripts/: seed_data.py  seed_mundial_2026.py
backend/tests/: conftest.py  test_admin.py  test_ai_quota.py  test_auth.py  test_markets.py  test_predictions.py  test_roles.py  test_security.py  test_users.py
docs/: generate_pdf.py  (+2 more)
(+118 files in other folders)
